...
import com.example.vynilsappequipo10.ui.theme.ColorOrangePrimary
import com.example.vynilsappequipo10.ui.theme.ColorSurface
import com.example.vynilsappequipo10.ui.theme.ColorTextHint

private enum class MainTab(val route: String, val label: String, val icon: ImageVector) {
    ALBUMS("albums_list", "ÁLBUMES", Icons.AutoMirrored.Filled.List),
    ARTISTS("artists_list", "ARTISTAS", Icons.Default.Person),
    COLLECTORS("collectors_list", "COLECCIONISTAS", Icons.Default.AccountBox)
}

@Composable
fun MainScreen(isCollector: Boolean, onLogout: () -> Unit) {
    val navController = rememberNavController()
    val navBackStackEntry by navController.currentBackStackEntryAsState()
...
                FloatingActionButton(
                    onClick = {
                        navController.navigate("create_album")
                    },
                    containerColor = ColorOrangePrimary,
                    contentColor = Color.White,
                    modifier = Modifier.testTag("fab_create_album")
                ) {
                    Icon(imageVector = Icons.Default.Add, contentDescription = "Crear Álbum")
                }
            } else if (isCollector && (currentRoute == MainTab.ARTISTS.route || currentRoute == MainTab.COLLECTORS.route)) {
                FloatingActionButton(
                    onClick = {
...
